--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -2,8 +2,7 @@ name: Build Release Android
 
 on:
   push:
-    branches:    
-      - master
+    branches: [ "main" ]
 #     tags:
 #     - 'v*'
 
