--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -75,6 +75,7 @@ jobs:
       run: | 
        sudo apt-get install libusb-dev
        sudo apt-get install libusb-1.0-0-dev
+       sudo apt-get install -y protobuf-compiler libprotobuf-dev
        
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
