--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -66,7 +66,7 @@ jobs:
 
     - name: Install Rust
       run: |
-        rustup install nightly
+        rustup install 1.67.0
         rustup default nightly
         rustup target add ${{ matrix.target }}
         rustup show
@@ -76,8 +76,6 @@ jobs:
        sudo apt-get install libusb-dev
        sudo apt-get install libusb-1.0-0-dev
        sudo apt-get install -y protobuf-compiler libprotobuf-dev
-       sudo apt-get update gcc
-       gcc -v
        
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
