--- a/.github/workflows/Build Release Android By MacOS.yml
+++ b/.github/workflows/Build Release Android By MacOS.yml
@@ -32,18 +32,18 @@ jobs:
     strategy:
       matrix:
         include:
-        - build: x86
-          target: i686-linux-android
-          linker: i686-linux-android29-clang
-          openssl: android-x86
-        - build: x86_64
-          target: x86_64-linux-android
-          linker: x86_64-linux-android29-clang
-          openssl: android-x86_64
-        - build: arm-v7
-          target: armv7-linux-androideabi
-          linker: armv7a-linux-androideabi29-clang
-          openssl: android-arm
+#         - build: x86
+#           target: i686-linux-android
+#           linker: i686-linux-android29-clang
+#           openssl: android-x86
+#         - build: x86_64
+#           target: x86_64-linux-android
+#           linker: x86_64-linux-android29-clang
+#           openssl: android-x86_64
+#         - build: arm-v7
+#           target: armv7-linux-androideabi
+#           linker: armv7a-linux-androideabi29-clang
+#           openssl: android-arm
         - build: aarch64
           target: aarch64-linux-android
           linker: aarch64-linux-android29-clang
@@ -74,6 +74,7 @@ jobs:
     - name: Install Libusb
       run: | 
        brew install libusb
+       brew install protobuf
        
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
