--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -73,6 +73,7 @@ jobs:
           
     - name: Install Rust
       run: |
+        rustup default nightly
         rustup target add ${{ matrix.target }}
         rustup show
         
