--- a/.github/workflows/build-release-ios-imkey.yml
+++ b/.github/workflows/build-release-ios-imkey.yml
@@ -32,8 +32,8 @@ jobs:
 
     - name: Install Rust
       run: |
-        rustup install 1.47.0
-        rustup default 1.47.0-x86_64-apple-darwin
+        rustup toolchain install nightly-2022-10-31
+        rustup default nightly-2022-10-31-x86_64-apple-darwin
         rustup target add aarch64-apple-ios x86_64-apple-ios
         rustup show
         cargo install cargo-lipo
