--- a/publish/android/tokencore/maven-push.gradle
+++ b/publish/android/tokencore/maven-push.gradle
@@ -14,7 +14,7 @@ afterEvaluate {
     publishing {
         publications {
             Production(MavenPublication) {
-                artifact("$buildDir/outputs/aar/tokencore-release.aar")
+                artifact("$buildDir/outputs/aar/token-core-${VERSION}.aar")
 
                 groupId this.group
                 artifactId 'token-core'
