--- a/.github/workflows/build-release-ios.yml
+++ b/.github/workflows/build-release-ios.yml
@@ -1,4 +1,4 @@
-name: Build Release IOS imKey
+name: Build Release IOS
 
 on:
   push:
@@ -39,7 +39,7 @@ jobs:
         cargo install cargo-lipo
         brew install protobuf
 
-    - name: Build
+    - name: Build And Publish
       run: | 
         pushd ./ikc
         cargo lipo --release --targets aarch64-apple-ios x86_64-apple-ios
@@ -51,39 +51,63 @@ jobs:
         cbindgen ./src/lib.rs -l c > ${{github.workspace}}/target/tcx.h
         popd
         
-        LIBS=./tcx-examples/TokenCoreX/TokenCoreX
-        cp ./target/universal/release/libconnector.a $LIBS/libconnector.a
-        cp ./target/universal/release/libtcx.a $LIBS/libtcx.a
-        cp ./target/connector.h $LIBS/connector.h
-        cp ./target/tcx.h $LIBS/tcx.h
+        LIBS_IKC=./mobile-sdk/imKeyCoreX/imKeyCoreX
+        LIBS_TCX=./tcx-examples/TokenCoreX/TokenCoreX
+        cp ./target/universal/release/libconnector.a $LIBS_IKC/libconnector.a
+        cp ./target/universal/release/libtcx.a $LIBS_TCX/libtcx.a
+        cp ./target/connector.h $LIBS_IKC/connector.h
+        cp ./target/tcx.h $LIBS_TCX/tcx.h
         if [ -d "./ios-release" ]; then
           rm -rf ./ios-release
         fi
         
-        pushd ./tcx-examples/TokenCoreX
         BUILD_DIR=./Products
         BUILD_ROOT=./Products
         SYMROOT=./Products
         BUILD_PRODUCTS=./Products
         CONFIGURATION=Release
-        PROJECT_NAME=TokenCoreX
+        PROJECT_NAME_IKC=imKeyCoreX
+        PROJECT_NAME_TCX=TokenCoreX
         
+        pushd ./mobile-sdk/imKeyCoreX        
         mkdir -p $BUILD_DIR
         UNIVERSAL_OUTPUTFOLDER=$BUILD_DIR/$CONFIGURATION-Universal
         mkdir -p $UNIVERSAL_OUTPUTFOLDER
  
-        xcodebuild -target $PROJECT_NAME ONLY_ACTIVE_ARCH=NO -configuration $CONFIGURATION -sdk iphoneos BUILD_DIR=$BUILD_DIR BUILD_ROOT=$BUILD_ROOT build
-        xcodebuild -target $PROJECT_NAME -configuration Debug -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO BUILD_DIR=$BUILD_DIR BUILD_ROOT=$BUILD_ROOT EXCLUDED_ARCHS=arm64 build
-        
-        cp -R $BUILD_DIR/$CONFIGURATION-iphoneos/$PROJECT_NAME.framework $UNIVERSAL_OUTPUTFOLDER/    
-        lipo -create -output $UNIVERSAL_OUTPUTFOLDER/$PROJECT_NAME.framework/$PROJECT_NAME $BUILD_PRODUCTS/Debug-iphonesimulator/$PROJECT_NAME.framework/$PROJECT_NAME $BUILD_DIR/$CONFIGURATION-iphoneos/$PROJECT_NAME.framework/$PROJECT_NAME
+        xcodebuild -target $PROJECT_NAME_IKC ONLY_ACTIVE_ARCH=NO -configuration $CONFIGURATION -sdk iphoneos BUILD_DIR=$BUILD_DIR BUILD_ROOT=$BUILD_ROOT build
+        xcodebuild -target $PROJECT_NAME_IKC -configuration Debug -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO BUILD_DIR=$BUILD_DIR BUILD_ROOT=$BUILD_ROOT EXCLUDED_ARCHS=arm64 build      
+        cp -R $BUILD_DIR/$CONFIGURATION-iphoneos/$PROJECT_NAME_IKC.framework $UNIVERSAL_OUTPUTFOLDER/
+        lipo -create -output $UNIVERSAL_OUTPUTFOLDER/$PROJECT_NAME_IKC.framework/$PROJECT_NAME_IKC $BUILD_PRODUCTS/Debug-iphonesimulator/$PROJECT_NAME_IKC.framework/$PROJECT_NAME_IKC $BUILD_DIR/$CONFIGURATION-iphoneos/$PROJECT_NAME_IKC.framework/$PROJECT_NAME_IKC
         
         cp -R $UNIVERSAL_OUTPUTFOLDER/ ../../ios-release
         rm -rf $UNIVERSAL_OUTPUTFOLDER 
         popd
         
-    - name: Publish
-      run: |
+        pushd ios-release
+        TAG_NAME=${{ github.ref }}
+        VERSION_NAME=${TAG_NAME: 11}
+        PACKAGE_NAME=ios-release-v$VERSION_NAME.zip
+        zip -q -r $PACKAGE_NAME .
+        curl -v -u ${{secrets.NEXUS_USER}}:${{secrets.NEXUS_PASSWORD}} --upload-file $PACKAGE_NAME https://nexus.token.im/repository/im-releases/im/imkey/ios/$VERSION_NAME/$PACKAGE_NAME
+        popd
+        
+        if [ -d "./ios-release" ]; then
+          rm -rf ./ios-release
+        fi
+        pushd ./tcx-examples/TokenCoreX       
+        mkdir -p $BUILD_DIR
+        UNIVERSAL_OUTPUTFOLDER=$BUILD_DIR/$CONFIGURATION-Universal
+        mkdir -p $UNIVERSAL_OUTPUTFOLDER
+ 
+        xcodebuild -target $PROJECT_NAME_TCX ONLY_ACTIVE_ARCH=NO -configuration $CONFIGURATION -sdk iphoneos BUILD_DIR=$BUILD_DIR BUILD_ROOT=$BUILD_ROOT build
+        xcodebuild -target $PROJECT_NAME_TCX -configuration Debug -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO BUILD_DIR=$BUILD_DIR BUILD_ROOT=$BUILD_ROOT EXCLUDED_ARCHS=arm64 build      
+        cp -R $BUILD_DIR/$CONFIGURATION-iphoneos/$PROJECT_NAME_TCX.framework $UNIVERSAL_OUTPUTFOLDER/
+        lipo -create -output $UNIVERSAL_OUTPUTFOLDER/$PROJECT_NAME_TCX.framework/$PROJECT_NAME_TCX $BUILD_PRODUCTS/Debug-iphonesimulator/$PROJECT_NAME_TCX.framework/$PROJECT_NAME_TCX $BUILD_DIR/$CONFIGURATION-iphoneos/$PROJECT_NAME_TCX.framework/$PROJECT_NAME_TCX
+        
+        cp -R $UNIVERSAL_OUTPUTFOLDER/ ../../ios-release
+        rm -rf $UNIVERSAL_OUTPUTFOLDER 
+        popd
+        
         pushd ios-release
         TAG_NAME=${{ github.ref }}
         VERSION_NAME=${TAG_NAME: 11}
@@ -91,6 +115,4 @@ jobs:
         zip -q -r $PACKAGE_NAME .
         curl -v -u ${{secrets.NEXUS_USER}}:${{secrets.NEXUS_PASSWORD}} --upload-file $PACKAGE_NAME https://nexus.token.im/repository/im-releases/com/consenlabs/ios/$VERSION_NAME/$PACKAGE_NAME
         popd
-      
-      
-      
+        
