--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ members=[
     "token-core/tcx",
     "token-core/tcx-tezos",
     "token-core/tcx-tester",
+    "token-core/tcx-eth2",
+    "token-core/zksync-crypto",
     "imkey-core/ikc",
     "imkey-core/ikc-common",
     "imkey-core/ikc-device",
