--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -23,7 +23,7 @@ jobs:
         )
       )
 
-    runs-on: ubuntu-20.04
+    runs-on: macos-latest
     
     steps:
     - name: Checkout repository
@@ -44,33 +44,36 @@ jobs:
     - name: Install Rust
       run: |
         rustup toolchain install nightly-2022-10-31
-        rustup default nightly-2022-10-31-x86_64-unknown-linux-gnu
+        rustup default nightly-2022-10-31-x86_64-apple-darwin
         rustup target add aarch64-linux-android armv7-linux-androideabi i686-linux-android x86_64-linux-android
         rustup show
         
-    - name: Install dependent
-      run: | 
-       sudo apt-get install -y libusb-dev libusb-1.0-0-dev libftdi1-dev libudev-dev
-       sudo apt-get install -y protobuf-compiler libprotobuf-dev
+    # - name: Install dependent
+    #   run: | 
+    #    sudo apt-get install -y libusb-dev libusb-1.0-0-dev libftdi1-dev libudev-dev
+    #    sudo apt-get install -y protobuf-compiler libprotobuf-dev
        
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
+    
+    # - name: Install NDK
+    #   run: sdkmanager "ndk;25.2.9519653"
         
-    - name: Configure Rust Config File
-      run: |
-        echo '[target.armv7-linux-androideabi]' >> ~/.cargo/config
-        echo 'ar = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"' >> ~/.cargo/config
-        echo 'linker = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/armv7a-linux-androideabi29-clang"' >> ~/.cargo/config
-        echo '[target.aarch64-linux-android]' >> ~/.cargo/config
-        echo 'ar = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"' >> ~/.cargo/config
-        echo 'linker = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android29-clang"' >> ~/.cargo/config
-        echo '[target.i686-linux-android]' >> ~/.cargo/config
-        echo 'ar = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"' >> ~/.cargo/config
-        echo 'linker = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/i686-linux-android29-clang"' >> ~/.cargo/config
-        echo '[target.x86_64-linux-android]' >> ~/.cargo/config
-        echo 'ar = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"' >> ~/.cargo/config
-        echo 'linker = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android29-clang"' >> ~/.cargo/config
-        cat ~/.cargo/config
+    # - name: Configure Rust Config File
+    #   run: |
+    #     echo '[target.armv7-linux-androideabi]' >> ~/.cargo/config
+    #     echo 'ar = "$HOME/.android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"' >> ~/.cargo/config
+    #     echo 'linker = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/armv7a-linux-androideabi29-clang"' >> ~/.cargo/config
+    #     echo '[target.aarch64-linux-android]' >> ~/.cargo/config
+    #     echo 'ar = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"' >> ~/.cargo/config
+    #     echo 'linker = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android29-clang"' >> ~/.cargo/config
+    #     echo '[target.i686-linux-android]' >> ~/.cargo/config
+    #     echo 'ar = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"' >> ~/.cargo/config
+    #     echo 'linker = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/i686-linux-android29-clang"' >> ~/.cargo/config
+    #     echo '[target.x86_64-linux-android]' >> ~/.cargo/config
+    #     echo 'ar = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"' >> ~/.cargo/config
+    #     echo 'linker = "/usr/local/lib/android/sdk/ndk/25.1.8937393/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android29-clang"' >> ~/.cargo/config
+    #     cat ~/.cargo/config
 
     - name: Build TCX And IKC
       run: | 
