--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -86,7 +86,10 @@ jobs:
 
     - name: Get commits
       id: getcommits
-      run: echo "commits=$(git log -n 5 --pretty=format:"%s")" >> $GITHUB_OUTPUT
+      shell: bash
+      run: |
+        OUTPUT="$(git log -n 5 --pretty=format:"%s")"
+        echo ::set-output name=commits::"${OUTPUT}"
 
     - name: Publish
       run: |
