--- a/.github/workflows/build-release-ios.yml
+++ b/.github/workflows/build-release-ios.yml
@@ -46,7 +46,10 @@ jobs:
 
     - name: Get commits
       id: getcommits
-      run: echo "commits=$(git log -n 5 --pretty=format:"%s")" >> $GITHUB_OUTPUT
+      shell: bash
+      run: |
+        OUTPUT="$(git log -n 5 --pretty=format:"%s")"
+        echo ::set-output name=commits::"${OUTPUT}"
 
 
     - name: Build And Publish
