--- a/token-core/tcx-eth2/Cargo.toml
+++ b/token-core/tcx-eth2/Cargo.toml
@@ -20,5 +20,5 @@ prost-types = "0.11.2"
 failure = "0.1.8"
 regex = "1.7.0"
 keccak-hash = "0.10.0"
-ssz-rs = { git = "https://github.com/ChorusOne/ssz-rs.git", rev = "cb08f18ca919cc1b685b861d0fa9e2daabe89737" }
-ssz-rs-derive = { git = "https://github.com/ChorusOne/ssz-rs.git", rev = "cb08f18ca919cc1b685b861d0fa9e2daabe89737" }
+ssz_rs = "0.8.0"
+ssz_rs_derive = "0.8.0"
