feat: fix sec issue

--- a/.github/workflows/build-release-android.yml
+++ b/.github/workflows/build-release-android.yml
@@ -1,7 +1,7 @@
 name: Build Android Release
 
 on:
-  pull_request_target:
+  pull_request:
     types: [assigned, opened, synchronize, reopened]
 
 env:
