--- a/imkey-core/ikc-wallet/coin-ethereum/Cargo.toml
+++ b/imkey-core/ikc-wallet/coin-ethereum/Cargo.toml
@@ -20,6 +20,7 @@ serde_json = "1.0.89"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_derive = "1.0.147"
 jsonrpc-core = "18.0.0"
+dotenv = "0.9.0"
 bitcoin = "0.29.2"
 bitcoin_hashes = "0.11.0"
 hex = "0.4.3"
